# assignment_rag_bot

./: README.md  app.py  embeddings.db  pyproject.toml  requirements.txt
docs/: faq.txt  notes.txt  policy.md
